CSS fix position Logout and Dark Mode

--- a/styles/body.css
+++ b/styles/body.css
@@ -7,9 +7,6 @@ body {
 }
 
 .sidebar {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 250px;
@@ -21,6 +18,12 @@ body {
     transition: all 0.3s ease;
     overflow: auto;
     z-index: 1; /* Ensure sidebar is above other content */
+}
+
+.bottom-items {
+    position: absolute; /* Positions at the bottom of sidebar */
+    bottom: 0; /* Ensures it sticks to the bottom */
+    width: 100%; /* Ensures it stretches across the sidebar width */
 }
 
 .sidebar.active {
